# headband

./: .gitignore  LICENSE  README.md  compose-dev.yaml
.devcontainer/: devcontainer.json
backend/api/: Dockerfile  main.py  pyproject.toml
backend/api/core/: config.py  dependencies.py  mcps.py
backend/api/core/agent/: orchestration.py
backend/db/: models.py  rag_service.py  session.py
envs/: backend.env  backend.env.sample
