[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4==0.0.2",
    "faker==30.8.1",
    "fastapi[standard]==0.115.11",
    "langchain==0.3.6",
    "langchain-community==0.3.4",
    "langchain-google-genai==2.1.4",
    "langchain-mcp-adapters>=0.0.9",
    "langfuse==2.60.2",
    "langgraph==0.2.39",
    "langgraph-checkpoint-postgres>=2.0.21",
    "mcp[cli]>=1.6.0",
    "prometheus-client==0.21.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.10",
    "pgvector==0.2.5",
    "llama-index==0.10.55",
    "llama-index-embeddings-huggingface==0.2.2",
    "pydantic-settings==2.6.0",
    "pypdf==4.2.0",
    "rich==13.9.4",
    "sqlmodel>=0.0.24",
    "sse-starlette==2.1.3",
]
